[package]
name = "cargo-altvup"
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"
license = "MIT"
repository = "https://github.com/xxshady/cargo-altvup"
readme = "README.md"

[[bin]]
name = "cargo-altvup"

[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
